# datareadme

./: .gitignore  AI.md  BUILD_LOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
datareadme/: __init__.py  api.py  cli.py  config.py  inferrer.py  loader.py  narrator.py  profiler.py  renderer.py
datareadme/backends/: __init__.py  anthropic.py  base.py  nollm.py  ollama.py  openai.py
docs/: backends.md  configuration.md  demo-script.md  getting-started.md  index.md  launch-kit.md
examples/survey/: DATA_README.md  survey.csv
examples/transactions/: DATA_README.md
tests/fixtures/: headerless_numbers.csv  mixed_values.csv  transactions.csv
tests/integration/: test_full_pipeline.py
tests/unit/: test_inferrer.py  test_narrator.py  test_profiler.py  test_renderer.py
