[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datareadme"
version = "0.1.0"
description = "Generate readable dataset README files from tabular data."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Subash Yadav" }
]
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
datareadme = "datareadme.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["datareadme*"]
